--- a/Source/Forms/gameplay.ui
+++ b/Source/Forms/gameplay.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Mainwindow</class>
- <widget class="QWidget" name="Mainwindow">
+ <class>GamePlay</class>
+ <widget class="QWidget" name="GamePlay">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Mainwindow</string>
+   <string>GamePlay</string>
   </property>
  </widget>
  <resources/>
