--- a/Source/Forms/gameselect.ui
+++ b/Source/Forms/gameselect.ui
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <author/>
-    <comment/>
-    <exportmacro/>
-    <class>GameSelect</class>
-    <widget class="QWidget" name="GameSelect">
-        <property name="geometry">
-            <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>400</width>
-                <height>300</height>
-            </rect>
-        </property>
-        <property name="windowTitle">
-            <string>GameSelect</string>
-        </property>
-    </widget>
-    <pixmapfunction/>
-    <connections/>
+ <class>GameSelect</class>
+ <widget class="QWidget" name="GameSelect">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>417</width>
+    <height>315</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>GameSelect</string>
+  </property>
+ </widget>
+ <resources/>
+ <connections/>
 </ui>
