--- a/Source/Forms/gameselect.ui
+++ b/Source/Forms/gameselect.ui
@@ -13,6 +13,19 @@
   <property name="windowTitle">
    <string>GameSelect</string>
   </property>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>110</y>
+     <width>41</width>
+     <height>9</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
