--- a/Source/assets/imagesrc.qrc
+++ b/Source/assets/imagesrc.qrc
@@ -1,7 +1,10 @@
 <RCC>
     <qresource prefix="/mainwindow">
         <file>background.jpg</file>
+        <file>background.png</file>
         <file>icon.jpg</file>
+        <file>exit.png</file>
+        <file>start.png</file>
     </qresource>
     <qresource prefix="/gameplay"/>
 </RCC>
