--- a/Source/assets/qsssrc.qrc
+++ b/Source/assets/qsssrc.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/qss">
         <file>gameplay.qss</file>
         <file>No.93-ShangShouMengDongTi-2.ttf</file>
+        <file>gamestart.qss</file>
     </qresource>
 </RCC>
