--- a/Source/Forms/mainwindow.ui
+++ b/Source/Forms/mainwindow.ui
@@ -1,47 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>MainWindow</class>
-    <widget class="QMainWindow" name="MainWindow">
-        <property name="geometry">
-            <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>1280</width>
-                <height>820</height>
-            </rect>
-        </property>
-        <property name="minimumSize">
-            <size>
-                <width>1280</width>
-                <height>800</height>
-            </size>
-        </property>
-        <property name="windowTitle">
-            <string>MainWindow</string>
-        </property>
-        <widget class="QMenuBar" name="menuBar">
-            <property name="geometry">
-                <rect>
-                    <x>0</x>
-                    <y>0</y>
-                    <width>1280</width>
-                    <height>23</height>
-                </rect>
-            </property>
-            <widget class="QMenu" name="menu">
-                <property name="title">
-                    <string>设置</string>
-                </property>
-                <addaction name="action"/>
-            </widget>
-            <addaction name="menu"/>
-        </widget>
-        <action name="action">
-            <property name="text">
-                <string>退出</string>
-            </property>
-        </action>
-    </widget>
-    <resources/>
-    <connections/>
+ <class>MainWindow</class>
+ <widget class="QMainWindow" name="MainWindow">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>1280</width>
+    <height>820</height>
+   </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1280</width>
+    <height>800</height>
+   </size>
+  </property>
+  <property name="windowTitle">
+   <string>MainWindow</string>
+  </property>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>1280</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>设置</string>
+    </property>
+    <addaction name="exitGame"/>
+    <addaction name="restart"/>
+   </widget>
+   <addaction name="menu"/>
+  </widget>
+  <action name="exitGame">
+   <property name="text">
+    <string>退出</string>
+   </property>
+  </action>
+  <action name="restart">
+   <property name="text">
+    <string>重新启动</string>
+   </property>
+  </action>
+ </widget>
+ <resources/>
+ <connections/>
 </ui>
