--- a/Source/assets/qss/gameselect.qss
+++ b/Source/assets/qss/gameselect.qss
@@ -3,10 +3,11 @@
 }
 
 QPushButton{
+    font: 20pt "093-SSMengDongiTi";
     color: #2f3640;
-    background-color: #f5f6fa;
+    background-color: #c1dbc2;
     border-color: #2f3640;
-    border-radius: 15px;
+    border-radius: 30px;
     border-style: solid;
     border-width: 2px;
     padding: 5px;
@@ -14,13 +15,13 @@ QPushButton{
 
 QPushButton::hover{
     color: #FFFFFF;
-    background-color: #718093;
+    background-color: #e18a33;
     border-color: #2f3640;
 }
 
 QPushButton::pressed,QPushButton::checked{
     color: #FFFFFF;
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 #273c75, stop:1 #487eb0);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 #66b3ff, stop:1 #487eb0);
 }
 
 QPushButton::disabled{
