修复警告,final版本

--- a/Source/Forms/gameplay.ui
+++ b/Source/Forms/gameplay.ui
@@ -104,7 +104,7 @@
                             </widget>
                         </item>
                         <item>
-                            <widget class="QLabel" name="minumTime">
+                            <widget class="QLabel" name="minimTime">
                                 <property name="text">
                                     <string>最快记录</string>
                                 </property>
